--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "zustand": "^3.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
