--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-ga": "^3.3.0",
     "zustand": "^3.4.2"
   },
   "devDependencies": {
