--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.1.2",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "vite-plugin-html": "^2.0.7"
   }
 }
