--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-ga": "^3.3.0",
+    "victory": "^35.5.1",
     "zustand": "^3.4.2"
   },
   "devDependencies": {
