--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/index.html",
+      "source": "/",
       "headers": [
         {
           "key": "Cache-Control",
