--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.0",
     "react-ga": "^3.3.0",
     "react-tooltip": "^4.2.18",
+    "victory": "^35.5.1",
     "zustand": "^3.4.2"
   },
   "devDependencies": {
