--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-ga": "^3.3.0",
+    "react-modal": "^3.13.1",
     "react-tooltip": "^4.2.18",
     "victory": "^35.5.1",
     "zustand": "^3.4.2"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "esbuild": "^0.9.7",
     "typescript": "^4.1.2",
